Fix Z-index issue with search on the front page
The the ImageJ logo et al. don't occlude the popup box.

--- a/assets/css/search.scss
+++ b/assets/css/search.scss
@@ -49,6 +49,7 @@ $shadowSize: 4px;
   background: lightgray;
   box-shadow: $shadowSize $shadowSize $shadowSize gray;
   display: none;
+  z-index: 1;
 }
 
 .ais-Hits-list {
